dashboard css scrollbar fixed

--- a/client/public/Styles/UserDash.css
+++ b/client/public/Styles/UserDash.css
@@ -1,5 +1,5 @@
 .user-dashboard-container{
-    padding: 150px 250px;
+    padding: 150px 250px 0;
 }
 
 
@@ -165,7 +165,7 @@
 
 @media screen and (max-width: 1200px){
     .user-dashboard-container{
-        padding: 150px 20px;
+        padding: 150px 20px 0;
     }
     .user-dashboard-container .account-data-conatiner .small-account-box{
         height: auto;   
